WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
279453
[WebGPU] executeBundles may attempt to encode commands on invalid encoder
https://bugs.webkit.org/show_bug.cgi?id=279453
Summary
[WebGPU] executeBundles may attempt to encode commands on invalid encoder
Mike Wyrzykowski
Reported
2024-09-10 10:24:09 PDT
[WebGPU] executeBundles may attempt to encode commands on invalid encoder
Attachments
Add attachment
proposed patch, testcase, etc.
Mike Wyrzykowski
Comment 1
2024-09-10 10:24:18 PDT
rdar://135707950
Mike Wyrzykowski
Comment 2
2024-09-10 11:02:01 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/33411
EWS
Comment 3
2024-09-10 19:40:48 PDT
Committed
283455@main
(871feed41fae): <
https://commits.webkit.org/283455@main
> Reviewed commits have been landed. Closing PR #33411 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug