[WebGPU] executeBundles may attempt to encode commands on invalid encoder https://bugs.webkit.org/show_bug.cgi?id=279453 rdar://135707950

Reviewed by Dan Glastonbury.

We need to reset the command encoder in the for loop as a validation
error would cause us to stop encoding commands.

* LayoutTests/fast/webgpu/nocrash/fuzz-279453-expected.txt: Added.
* LayoutTests/fast/webgpu/nocrash/fuzz-279453.html: Added.
* Source/WebGPU/WebGPU/RenderPassEncoder.mm:
(WebGPU::RenderPassEncoder::executeBundles):

Canonical link: https://commits.webkit.org/283455@main